tests/errors/assertion.AssertionFailed.2.art
doSth: function [x][
    ensure -> integer? x
    return x+10
]

print ["doing sth:" doSth 2]
print ["doing sth:" doSth [1 2 3]]